Set link to image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <!-- Header -->
 
     <header>
-        <img class="logo" src="/images/image1.png"  alt="Тут повинен бути логотип.">
+        <a href="https://save-my-soul-site-instruction.vercel.app/">
+            <img class="logo" src="/images/image1.png"  alt="Тут повинен бути логотип.">
+        </a>
     </header>
 
     <div class="container">
